welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:6: error: ';' expected but 'true' found.
  if (getCouleurSol()==color.green) {recule(); retrun true}
                                                      ^