welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
    // Write your code here
  if (estFaceMur()) {return false}
  avance()
  if (getCouleurSol()==color.green) {recule(); retrun true}
  else {recule(); return false}
}        
